src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void cv_drawFrameAxes_0(void* image, void* cameraMatrix, void* distCoeffs, void* rvec, void* tvec, float length, int thickness);
extern "C" __declspec(dllexport) void cv_rectangle_0(void* img, cv::Point pt1, cv::Point pt2, cv::Scalar color, int thickness, int lineType, int shift);
extern "C" __declspec(dllexport) void cv_rectangle_1(void* img, cv::Rect rec, cv::Scalar color, int thickness, int lineType, int shift);
extern "C" __declspec(dllexport) void cv_circle_0(void* img, cv::Point center, int radius, cv::Scalar color, int thickness, int lineType, int shift);
extern "C" __declspec(dllexport) void cv_ellipse_0(void* img, cv::Point center, cv::Size axes, double angle, double startAngle, double endAngle, cv::Scalar color, int thickness, int lineType, int shift);
extern "C" __declspec(dllexport) void cv_ellipse_1(void* img, void* box, cv::Scalar color, int thickness, int lineType);
extern "C" __declspec(dllexport) void cv_drawMarker_0(void* img, cv::Point position, cv::Scalar color, int markerType, int markerSize, int thickness, int line_type);
extern "C" __declspec(dllexport) void cv_fillConvexPoly_0(void* img, void* points, cv::Scalar color, int lineType, int shift);
extern "C" __declspec(dllexport) void cv_fillPoly_0(void* img, void* pts, cv::Scalar color, int lineType, int shift, cv::Point offset);
extern "C" __declspec(dllexport) void cv_polylines_0(void* img, void* pts, bool isClosed, cv::Scalar color, int thickness, int lineType, int shift);
extern "C" __declspec(dllexport) void cv_drawContours_0(void* image, void* contours, int contourIdx, cv::Scalar color, int thickness, int lineType, void* hierarchy, int maxLevel, cv::Point offset);
extern "C" __declspec(dllexport) bool cv_clipLine_0(cv::Rect imgRect, cv::Point pt1, cv::Point pt2);
extern "C" __declspec(dllexport) void cv_ellipse2Poly_0(cv::Point center, cv::Size axes, int angle, int arcStart, int arcEnd, int delta, void* pts);
extern "C" __declspec(dllexport) void cv_putText_0(void* img, const char* text, cv::Point org, int fontFace, double fontScale, cv::Scalar color, int thickness, int lineType, bool bottomLeftOrigin);
extern "C" __declspec(dllexport) cv::Size cv_getTextSize_0(const char* text, int fontFace, double fontScale, int thickness, void* baseLine);
extern "C" __declspec(dllexport) double cv_getFontScaleFromHeight_0(int fontFace, int pixelHeight, int thickness);
extern "C" __declspec(dllexport) cv::Point cv_putText_1(void* img, const char* text, cv::Point org, cv::Scalar color, void* fface, int size, int weight, int flags, cv::Range wrap);
extern "C" __declspec(dllexport) cv::Rect cv_getTextSize_1(cv::Size imgsize, const char* text, cv::Point org, void* fface, int size, int weight, int flags, cv::Range wrap);
extern "C" __declspec(dllexport) void cv_HoughLinesWithAccumulator_0(void* image, void* lines, double rho, double theta, int threshold, double srn, double stn, double min_theta, double max_theta, bool use_edgeval);
extern "C" __declspec(dllexport) void cv_HoughCirclesWithAccumulator_0(void* image, void* circles, int method, double dp, double minDist, double param1, double param2, int minRadius, int maxRadius);