src/OpenCV5Sharp/Generated/NativeMethods.Imgproc.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_drawFrameAxes_0(MatHandle image, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle rvec, MatHandle tvec, float length, int thickness);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_rectangle_0(MatHandle img, Point pt1, Point pt2, Scalar color, int thickness, int lineType, int shift);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_rectangle_1(MatHandle img, Rect rec, Scalar color, int thickness, int lineType, int shift);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_circle_0(MatHandle img, Point center, int radius, Scalar color, int thickness, int lineType, int shift);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_ellipse_0(MatHandle img, Point center, Size axes, double angle, double startAngle, double endAngle, Scalar color, int thickness, int lineType, int shift);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_ellipse_1(MatHandle img, RotatedRectHandle box, Scalar color, int thickness, int lineType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_drawMarker_0(MatHandle img, Point position, Scalar color, int markerType, int markerSize, int thickness, int line_type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fillConvexPoly_0(MatHandle img, MatHandle points, Scalar color, int lineType, int shift);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fillPoly_0(MatHandle img, IntPtr pts, Scalar color, int lineType, int shift, Point offset);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_polylines_0(MatHandle img, IntPtr pts, [MarshalAs(UnmanagedType.U1)] bool isClosed, Scalar color, int thickness, int lineType, int shift);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_drawContours_0(MatHandle image, IntPtr contours, int contourIdx, Scalar color, int thickness, int lineType, IntPtr hierarchy, int maxLevel, Point offset);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_clipLine_0(Rect imgRect, Point pt1, Point pt2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_ellipse2Poly_0(Point center, Size axes, int angle, int arcStart, int arcEnd, int delta, IntPtr pts);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_putText_0(MatHandle img, [MarshalAs(UnmanagedType.LPUTF8Str)] string? text, Point org, int fontFace, double fontScale, Scalar color, int thickness, int lineType, [MarshalAs(UnmanagedType.U1)] bool bottomLeftOrigin);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size cv_getTextSize_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? text, int fontFace, double fontScale, int thickness, IntPtr baseLine);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_getFontScaleFromHeight_0(int fontFace, int pixelHeight, int thickness);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point cv_putText_1(MatHandle img, [MarshalAs(UnmanagedType.LPUTF8Str)] string? text, Point org, Scalar color, FontFaceHandle fface, int size, int weight, int flags, Range wrap);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect cv_getTextSize_1(Size imgsize, [MarshalAs(UnmanagedType.LPUTF8Str)] string? text, Point org, FontFaceHandle fface, int size, int weight, int flags, Range wrap);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_HoughLinesWithAccumulator_0(MatHandle image, MatHandle lines, double rho, double theta, int threshold, double srn, double stn, double min_theta, double max_theta, [MarshalAs(UnmanagedType.U1)] bool use_edgeval);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_HoughCirclesWithAccumulator_0(MatHandle image, MatHandle circles, int method, double dp, double minDist, double param1, double param2, int minRadius, int maxRadius);
    }
}
